plugins {
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.5'
	id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {

	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.8.5'

	implementation 'com.google.code.gson:gson:2.13.1'

	implementation 'org.jsoup:jsoup:1.15.3'
	implementation "org.xhtmlrenderer:flying-saucer-core:9.1.20"
	implementation "org.xhtmlrenderer:flying-saucer-pdf-openpdf:9.1.20"

	implementation 'org.commonmark:commonmark:0.24.0'

	testImplementation('org.springframework.boot:spring-boot-starter-test')
}

test {
	useJUnitPlatform()
}
